# Clinical-Rag

./: bm25_store.py  build_bm25.py  hybrid_retrieve.py  ingest_one_pdf.py  main.py  ollama_llm.py  pyproject.toml  rag_retrieve.py  reset_qdrant.py  sampleans.txt  search_qdrant.py  setup_qdrant.py  test_embeddings.py
data/: bm25.pkl
