[project]
name = "clinical-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.131.0",
    "numpy>=2.4.2",
    "pymupdf>=1.27.1",
    "qdrant-client>=1.17.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
